@@ -12,7 +12,10 @@
 1.9.12 (2013-03-??)
  ! Mapsource OpenStreetMap Maps4u.eu updated
  ~ Reduced the number of decimal places of coordinates in GPX files created by 
-    MOBAC to 5 places (#242)  
+    MOBAC to 5 places (#242)
+ + Custom multi-layer map sources: Each layer can now have an alpha 
+    transparency value, specified as space separated list in <layersAlpha>
+    element    
 
 1.9.11 (2013-02-19)
  ! Bugfix for servers that send case insensitive content-types
